--- a/Content/css/styles.css
+++ b/Content/css/styles.css
@@ -32,3 +32,19 @@ input {
   color:white;
   background: black;
 }
+.word {
+  display: block;
+  float:left;
+  border:1px solid black;
+  border-radius: 5px;
+  padding:10px;
+  margin:10px;
+  cursor:pointer;
+}
+.word:hover {
+  background:lightgray;
+}
+
+strong {
+  font-size:1.3em;
+}
